<resources>
    <string name="app_name">Pasta</string>
    <string name="addpasta">Add a new pasta</string>
    <string name="add">Add</string>
    <string name="cancel">Cancel</string>
    <string name="notification">Time to eat pasta?</string>
    <string name="settings">Settings</string>
    <string name="help">Help</string>
    <string name="theme">Customization</string>
    <string name="backup" translatable="false">Backup</string>
    <string name="advanced" translatable="false"></string>
    <string name="themeInfo">More themes coming soon™</string>
    <string name="nightMode">Night Mode</string>
    <string name="dayMode">Day Mode</string>
    <string name="copyInfo">You can copy a pasta by pressing this button.</string>
    <string name="deleteInfo">You can delete a pasta by pressing this button.</string>
    <string name="addInfo">You can add a new pasta by pressing this button.</string>
    <string name="backupInfo">Import and export your pastas. The backup will be saved on your phone\'s internal storage called \"pastabackup.db\". If you want to import a database, this backup file should be present on your smartphone. Warning! When you restore, all your current pastas will be deleted!.</string>
    <string name="favorites">Favorites</string>
    <string name="hot">Hot</string>
    <string name="unicodes">Unicodes</string>
    <string name="moodAndReactions">Mood/Reactions</string>
    <string name="positive">Positive</string>
    <string name="neutral">Neutral</string>
    <string name="negative">Negative</string>
    <string name="upvote">Upvote</string>
    <string name="downvote">Downvote</string>
    <string name="stop">Stop</string>
    <string name="specificTopics">SpecificTopics</string>
    <string name="identification">Identification</string>
    <string name="congratulations">Congratulations</string>
    <string name="shitposts">Shitposts</string>
    <string name="trolls">Trolls</string>
    <string name="love">Love</string>
    <string name="games">Games</string>
    <string name="animals">Animals</string>
    <string name="stories">Stories</string>
    <string name="badass">Badass</string>
    <string name="nerdy">Nerdy</string>
    <string name="notworking">Not available</string>
    <string name="appVersion">version 0.0.4</string>
    <string name="export">Export your pastas.</string>
    <string name="restore">Import your pastas.</string>
    <string name="backupToast">Pastas succesfully saved!</string>
    <string name="restoreToast">Pastas succesfully restored!</string>
    <string name="delete">Pasta deleted!</string>


    <string name="lightGreenApplied">Design changed to Light Green</string>
    <string name="nightThemeApplied">Night Mode set!</string>
    <string name="dayThemeApplied">Day Mode set!</string>


    <string name="copy0">Yummy!</string>
    <string name="copy1">Delicous!</string>
    <string name="copy2">good pasta go౦ԁ pAsta🍝</string>
    <string name="copy3" translatable="false">🍝 🍝🍝 🍝 🍞 🍝 🍴 🍴 🍴 🍝🍝</string>
    <string name="copy4" translatable="false">mMMMMᎷМ</string>
    <string name="copy5">Tasty!</string>
    <string name="copy6">Very pleasing to look at, did it taste as good as it looks?</string>
    <string name="copy7" translatable="false">ɖී؀ීϸ</string>
    <string name="copy8">It looks simple and delicious.</string>
    <string name="copy9">No pancakes? Pancakes and eggs are the best.</string>
    <string name="copy10">I seriously considered cooking this once until I realized how much I despise vegetables</string>
    <string name="copy11">If my pasta🍝🍴🍝🍅and my girl👸🏼😍 both drowning😱🌊 , you know the drill💯😎</string>
    <string name="copy12">That\'s a really pretty little dessert.</string>
    <string name="copy13">Perfect blend of sauce and char. Mmmmhmmm</string>
    <string name="copy14">That looks amazing! Well done! Do you have a go to recipe for the sauce?</string>
    <string name="copy15">If we\'re having a curry battle - I put my money on Thai, every time</string>
    <string name="copy16" translatable="false">/r/AteThePasta/</string>
    <string name="copy17" translatable="false">/r/emojipasta</string>
    <string name="copy18" translatable="false">/r/copypasta</string>
    <string name="copy19">Avocado, plantains, and empanadas? Count me in!</string>
    <string name="copy20">I would add steak.</string>
    <string name="copy21">Armenians call this Manti</string>
    <string name="copy22">That is powerful! Enjoy!</string>
    <string name="copy23">A nice meal for a nice day.</string>
    <string name="copy24">It may seem like sacrilege but soy sauce and butter is glorious.</string>
    <string name="copy25">Nah man, thats good soup. Great with rice mixed in and some bachan.</string>
    <string name="copy26">I\'ve eaten a lot of takoyaki. This one looks gorgeous.</string>
    <string name="copy27">Looks like it\'d go great with a fruity cream cheese. Or some acid.</string>
    <string name="copy28">"May I go ahead and chisel your aromasphere?"</string>
    <string name="copy29" translatable="false">/r/oddlysatisfying</string>
</resources>
