<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item android:id="@+id/menu_item_help"
        android:title="@string/help"
        android:icon="@android:drawable/ic_menu_share"
        android:actionProviderClass="android.widget.ShareActionProvider" />

    <item
        android:id="@+id/settings"
        android:title="@string/settings"
        android:orderInCategory="101"
        android:icon="@drawable/ic_add_white_24dp">

        <menu>

            <item android:id="@+id/menu_item_theme"
                android:title="@string/theme" />

            <item android:id="@+id/menu_item_backup"
                android:title="@string/backup" />

        </menu>

    </item>

    <item
        android:id="@+id/action_night"
        android:title="Night Mode"
        app:showAsAction="never">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/menu_night_mode_system"
                    android:title="system" />
                <item
                    android:id="@+id/menu_night_mode_day"
                    android:title="day" />
                <item
                    android:id="@+id/menu_night_mode_night"
                    android:title="night" />
                <item
                    android:id="@+id/menu_night_mode_auto"
                    android:title="auto" />
            </group>
        </menu>
    </item>
</menu>