<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="8dp"
        card_view:cardCornerRadius="4dp"
        android:id="@+id/helpcard1">

        <TextView
            android:id="@+id/help1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="80dp"
            android:layout_marginTop="26dp"
            android:layout_marginBottom="16dp"
            android:textSize="18sp"
            android:text="@string/addInfo"
            android:textIsSelectable="true" />
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <com.github.clans.fab.FloatingActionButton
                android:id="@+id/addBtn"
                style="@style/fab_add"
                android:src="@drawable/ic_add_white_24dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom|right"
                android:layout_alignParentRight="true"
                android:layout_margin="16dp"
                android:layout_marginBottom="12dp"
                android:layout_marginRight="12dp"
                android:scaleType="centerInside"
                app:fabSize="mini" />

        </RelativeLayout>


        </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="8dp"
        card_view:cardCornerRadius="4dp"
        android:layout_below="@+id/helpcard1">

        <TextView
            android:id="@+id/help2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="80dp"
            android:layout_marginTop="24dp"
            android:layout_marginBottom="16dp"
            android:textSize="18sp"
            android:text="@string/deleteInfo"
            android:textIsSelectable="true" />

        <TextView
            android:id="@+id/help3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="80dp"
            android:layout_marginTop="108dp"
            android:layout_marginBottom="16dp"
            android:textSize="18sp"
            android:text="@string/copyInfo"
            android:textIsSelectable="true"/>


        <com.github.clans.fab.FloatingActionButton
            android:id="@+id/delete"
            style="@style/fab_add"
            app:fab_size="mini"
            android:src="@drawable/ic_delete_white_24dp"
            android:layout_width="16dp"
            android:layout_height="8dp"
            android:layout_marginTop="12dp"
            android:layout_marginRight="12dp"
            android:layout_marginBottom="16dp"
            android:layout_gravity="top|right"
            android:layout_alignParentBottom="true"
            android:layout_alignParentRight="true"/>

        <com.github.clans.fab.FloatingActionButton
            android:id="@+id/copy"
            style="@style/fab_add"
            app:fab_size="mini"
            android:src="@drawable/ic_restaurant_menu_white_24dp"
            android:layout_width="16dp"
            android:layout_height="8dp"
            android:layout_marginTop="96dp"
            android:layout_marginRight="12dp"
            android:layout_marginBottom="16dp"
            android:layout_gravity="top|right"
            android:layout_alignParentBottom="true"
            android:layout_alignParentRight="true"/>

    </android.support.v7.widget.CardView>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="version 0.0.3"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true">
    </TextView>

</RelativeLayout>