<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/themepanel">

    <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:id="@+id/info"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="3dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        card_view:cardCornerRadius="4dp">

        <TextView
            android:id="@+id/daycard"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="80dp"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:textSize="18sp"
            android:text="@string/themeInfo"
            android:textIsSelectable="true" />

    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="3dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_below="@id/info"
        card_view:cardCornerRadius="4dp"
        android:id="@+id/nightTheme">

        <TextView
            android:id="@+id/night"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="80dp"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:textSize="18sp"
            android:text="@string/nightMode"
            android:textIsSelectable="true" />

        <com.github.clans.fab.FloatingActionButton
            android:id="@+id/nightbutton"
            style="@style/fab_night"
            app:fab_size="mini"
            android:src="@drawable/ic_brightness_2_white_24dp"
            android:layout_width="16dp"
            android:layout_height="8dp"
            android:layout_marginTop="12dp"
            android:layout_marginRight="12dp"
            android:layout_marginBottom="16dp"
            android:layout_gravity="top|right"
            android:layout_alignParentBottom="true"
            android:layout_alignParentRight="true"
            android:onClick="appThemeNight" />

    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="3dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_below="@id/nightTheme"
        card_view:cardCornerRadius="4dp"
        android:id="@+id/dayTheme">

        <TextView
            android:id="@+id/day"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="80dp"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:textSize="18sp"
            android:text="@string/dayMode"
            android:textIsSelectable="true" />


        <com.github.clans.fab.FloatingActionButton
            android:id="@+id/day_theme"
            style="@style/fab_day"
            app:fab_size="mini"
            android:src="@drawable/ic_wb_sunny_black_24dp"
            android:layout_width="16dp"
            android:layout_height="8dp"
            android:layout_marginTop="12dp"
            android:layout_marginRight="12dp"
            android:layout_marginBottom="16dp"
            android:layout_gravity="top|right"
            android:layout_alignParentBottom="true"
            android:layout_alignParentRight="true"
            android:onClick="appThemeDay" />

    </android.support.v7.widget.CardView>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="version 0.0.3"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:id="@+id/textView">
    </TextView>

</RelativeLayout>